# cni-rule-app

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-build.yml
.omc/: project-memory.json
.omc/sessions/: 265ce01b-6062-4904-8cb5-1f4f2ec7c53a.json
.omc/state/: agent-replay-929ade20-1fb3-4e37-baa7-1e986c197f88.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
.omc/state/sessions/929ade20-1fb3-4e37-baa7-1e986c197f88/: hud-state.json  last-tool-error-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
.omx/: metrics.json
.omx/logs/: omx-2026-07-02.jsonl  tmux-hook-2026-07-02.jsonl  turns-2026-07-02.jsonl
.omx/state/: native-stop-state.json  session.json  subagent-tracking.json  tmux-hook-state.json
.omx/state/sessions/019f227d-ddf9-7492-addb-843542933386/: hud-state.json  notify-hook-state.json  prompt-routing-state.json
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/.omc/state/: agent-replay-929ade20-1fb3-4e37-baa7-1e986c197f88.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
app/.omc/state/sessions/929ade20-1fb3-4e37-baa7-1e986c197f88/: hud-state.json  mission-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
app/src/: App.svelte  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/lib/: chat.test.ts  chat.ts  constants.test.ts  constants.ts
crates/cni-rules-mcp/: Cargo.toml
crates/cni-rules-mcp/src/: main.rs
crates/pack-updater/: Cargo.toml
crates/pack-updater/src/: lib.rs
crates/public-rules-mcp/: Cargo.toml
crates/public-rules-mcp/src/: lib.rs  main.rs
crates/public-rules-mcp/tests/: http_transport.rs
crates/rules-core/: Cargo.toml
crates/rules-core/examples/: eval.rs  verify_pack_archive.rs
crates/rules-core/src/: lib.rs
crates/rules-engines/: Cargo.toml
crates/rules-engines/examples/: e2e.rs
crates/rules-engines/src/: lib.rs
pipeline/: README.md  analyze_qlogs.py  pyproject.toml  verify_extraction.py
pipeline/.omc/state/: hud-stdin-cache.json
pipeline/.omc/state/sessions/929ade20-1fb3-4e37-baa7-1e986c197f88/: hud-state.json  pre-tool-advisory-throttle.json
pipeline/pack-builder/: Cargo.toml
pipeline/pack-builder/src/: main.rs
pipeline/src/cni_rule_pipeline/: __init__.py  pipeline.py
pipeline/tests/: test_pipeline.py  test_verify_extraction.py
scripts/: sweep-eval.sh
