[package]
name = "public-rules-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
rmcp = { version = "2.0", features = ["server", "macros", "transport-io"] }
rules-core.workspace = true
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
toml = "0.8"
