[package]
name = "public-rules-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
axum = "0.8"
rmcp = { version = "2.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
rules-core.workspace = true
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "net", "signal"] }
tokio-util = "0.7"
toml = "0.8"

[dev-dependencies]
rmcp = { version = "2.0", features = ["client", "transport-streamable-http-client-reqwest"] }
sha2 = "0.10"
